--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vee-validate/i18n": "^4.15.0",
+    "@vee-validate/rules": "^4.15.0",
     "axios": "^1.9.0",
+    "vee-validate": "^4.15.0",
     "vue": "^3.5.13"
   },
   "devDependencies": {
