--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@vee-validate/i18n": "^4.15.0",
     "@vee-validate/rules": "^4.15.0",
     "axios": "^1.9.0",
+    "bootstrap": "^5.3.6",
     "vee-validate": "^4.15.0",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
+    "sass": "^1.89.0",
     "vite": "^6.3.5"
   }
 }
