--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vee-validate/rules": "^4.15.0",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
+    "pinia": "^3.0.3",
     "vee-validate": "^4.15.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
