--- a/package.json
+++ b/package.json
@@ -6,20 +6,28 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@pinia/testing": "^1.0.2",
+    "@playwright/test": "^1.53.1",
     "@vee-validate/i18n": "^4.15.0",
     "@vee-validate/rules": "^4.15.0",
+    "@vitest/coverage-v8": "^3.2.4",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
+    "jsdom": "^26.1.0",
     "pinia": "^3.0.3",
     "vee-validate": "^4.15.0",
+    "vitest": "^3.2.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
+    "@vue/test-utils": "^2.4.6",
     "sass": "^1.89.0",
     "vite": "^6.3.5"
   }
