apollo client try

--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@apollo/client": "^3.13.8",
     "@pinia/testing": "^1.0.2",
     "@playwright/test": "^1.53.1",
     "@vee-validate/i18n": "^4.15.0",
     "@vee-validate/rules": "^4.15.0",
     "@vitest/coverage-v8": "^3.2.4",
+    "@vue/apollo-composable": "^4.2.2",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
+    "graphql": "^16.11.0",
+    "graphql-tag": "^2.12.6",
     "jsdom": "^26.1.0",
     "pinia": "^3.0.3",
     "vee-validate": "^4.15.0",
